--- a/unidad-1/proyecto-ofuscado/AU04Ofuscado.cbp
+++ b/unidad-1/proyecto-ofuscado/AU04Ofuscado.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="unidad-1" />
+		<Option title="AU04Ofuscado" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/unidad-1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/AU04Ofuscado" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/unidad-1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/AU04Ofuscado" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,19 +31,16 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="cadenas.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="cadenas.h" />
+		<Linker>
+			<Add library="./libOfuscadoLib.a" />
+		</Linker>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="vectores.c">
+		<Unit filename="ofuscado.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="vectores.h" />
-		<Extensions>
-			<lib_finder disable_auto="1" />
-		</Extensions>
+		<Unit filename="ofuscado.h" />
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
