--- a/unidad-1/unidad-1/unidad-1.cbp
+++ b/unidad-1/unidad-1/unidad-1.cbp
@@ -38,6 +38,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="matrices.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="matrices.h" />
 		<Unit filename="vectores.c">
 			<Option compilerVar="CC" />
 		</Unit>
